--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "react": "16.8.1",
     "react-native": "0.61.2",
     "react-native-chart-kit": "^3.11.0",
+    "react-native-gesture-handler": "^1.5.1",
+    "react-native-reanimated": "^1.4.0",
+    "react-native-screens": "^2.0.0-alpha.12",
     "react-native-svg": "^9.13.3",
     "react-native-ui-kitten": "^4.2.0",
+    "react-navigation": "^4.0.10",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
     "redux-saga": "^1.1.1"
