--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-svg": "^9.13.3",
     "react-native-ui-kitten": "^4.2.0",
     "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^1.10.3",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
     "redux-saga": "^1.1.1"
