--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "ReactNativeApp",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "private": true,
+  "client": {
+    "client_id": "1111",
+    "client_secret": "121212"
+  },
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
@@ -10,6 +14,8 @@
   },
   "dependencies": {
     "@eva-design/eva": "^1.3.0-beta.1",
+    "axios": "^0.19.0",
+    "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "16.8.1",
     "react-native": "0.61.2",
