--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react": "16.8.1",
     "react-native": "0.61.2",
     "react-native-chart-kit": "^3.11.0",
+    "react-native-firebase": "^5.5.6",
     "react-native-gesture-handler": "^1.5.1",
+    "react-native-push-notification-popup": "^1.4.0",
     "react-native-reanimated": "^1.4.0",
     "react-native-screens": "^2.0.0-alpha.12",
     "react-native-svg": "^9.13.3",
