--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@eva-design/eva": "^1.3.0-beta.1",
+    "@react-native-community/async-storage": "^1.6.3",
     "axios": "^0.19.0",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
